client/src/views/page-components/statistics-page/RecentlyAccountHistory/RecentlyAccountHistory.scss
.recently-account-history{
    width:550px;
    height:325px;
    border-radius:10px;
    padding:30px;
    background-color: #fff;
    span {
        font-family: Raleway;
        font-weight: bold;
        font-size: 20px;
        color:var(--font-color);
    }

    position:relative;

    .recently-account-history__title{
        display:block;
        margin-bottom:35px;
    }

    .recently-account:not(:last-child){
        margin-bottom:15px;
    }
}

.recently-account-history__detail{
    all:unset;
    position:absolute;
    right:35px;
    top:35px;
    cursor: pointer;
}


// RecentlyAccount
.recently-account{
    display:flex;
    height: fit-content;
    align-items:center;
    padding: 0 10px;

    img {
        width:40px;
    }
    div{
        margin-left:40px;
        
        span{
            display:block;
            text-align:start;
            line-height:30px;
            font-size:18px;
            font-weight: normal;
        }

        .recently-account__title{
            font-weight: bold;
        }
    }
    span{
        flex:3 160px;
        font-size:20px;
        text-align:end;
        font-weight:bold;
        .hundred-won{
            font-weight: normal;
        }
    }
}

